# vscode-ncproj

./: .clang-format  .dockerignore  .gitignore  .vscodeignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  ncproj.sln  package.json
cmtconfig/: AllAttributesParser.cs  CodeGroups.cs  NCSettingsDefinition.cs  NCSettingsForm.Designer.cs  NCSettingsForm.cs  NCSettingsForm.pl.resx  NCSettingsForm.resx  Program.cs  cmtconfig.csproj
cmtconfig/NCSettingsForm/: Autor.Designer.cs  Autor.cs  Autor.resx  CNCInitialParams.Designer.cs  CNCInitialParams.cs  CNCInitialParams.resx  CNCKinematics.Designer.cs  CNCKinematics.cs  CNCKinematics.pl.resx  CNCKinematics.resx  CNCMachinePoints.Designer.cs  CNCMachinePoints.cs  CNCMachinePoints.resx  CNCMachineTool.Designer.cs  CNCMachineTool.cs  CNCMachineTool.pl.resx  CNCMachineTool.resx  CNCProgramZero.Designer.cs  CNCProgramZero.cs  CNCProgramZero.pl.resx  CNCProgramZero.resx  Kinematyka.Designer.cs  Kinematyka.cs  Kinematyka.resx  ObrabiarkaCNC.Designer.cs  ObrabiarkaCNC.cs  ObrabiarkaCNC.resx  ObszarRoboczy.Designer.cs  ObszarRoboczy.cs  ObszarRoboczy.pl.resx  ObszarRoboczy.resx  Parametry.Designer.cs  Parametry.cs  Parametry.pl.resx  Parametry.resx
cmtconfig/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.Designer.cs.bak  Resources.pl.resx  Resources.resx  Settings.Designer.cs
conf/: nc_settings.json  nc_settings_name_en.json  nc_settings_name_pl.json
conf/fanuc_lathe/: gcode_groups.json
conf/fanuc_lathe/desc/: gcode_desc_en.json  gcode_desc_pl.json  mcode_desc_en.json
conf/fanuc_lathe_system_a/: gcode_groups.json  grammar.json  mcode_groups.json
conf/fanuc_lathe_system_a/desc/: gcode_desc_en.json  mcode_desc_pl.json
conf/fanuc_lathe_system_b/: gcode_groups.json
conf/fanuc_lathe_system_b/desc/: gcode_desc_en.json  macros_desc_en.json  mcode_desc_en.json
conf/fanuc_lathe_system_c/: gcode_groups.json
conf/fanuc_lathe_system_c/desc/: gcode_desc_en.json
conf/fanuc_mill/: gcode_groups.json  grammar.json
conf/fanuc_mill/desc/: gcode_desc_en.json  gcode_desc_pl.json  macros_desc_en.json  mcode_desc_en.json  mcode_desc_pl.json
conf/fanuc_millturn_system_a/: gcode_groups.json  grammar.json
conf/fanuc_millturn_system_b/: gcode_groups.json  grammar.json
conf/generic_lathe/: gcode_groups.json  grammar.json  mcode_groups.json
conf/generic_mill/: gcode_groups.json  grammar.json  mcode_groups.json
conf/haas_lathe/: gcode_groups.json  grammar.json  mcode_groups.json
conf/haas_mill/: gcode_groups.json  grammar.json  mcode_groups.json
conf/makino_mill/: gcode_groups.json  grammar.json  mcode_groups.json
docker/alpine/: Dockerfile  docker-compose.yaml
docker/debian/: Dockerfile  docker-compose.yaml
nclangsrv/: CMakeLists.txt  CodeGroupsReader.cpp  CodeGroupsReader.h  CodesReader.cpp  CodesReader.h  JsonMessageHandler.cpp  JsonMessageHandler.h  Logger.cpp  Logger.h  MacrosDescReader.cpp  MacrosDescReader.h  NCParser.cpp  NCParser.h  NCSettingsReader.cpp  NCSettingsReader.h  ReadMe.txt  WordGrammarReader.cpp  WordGrammarReader.h  nclangsrv.cpp  nclangsrv.vcxproj  nclangsrv.vcxproj.filters  packages.config  stdafx.cpp  stdafx.h
parser/: AllAttributesParserBase.h  AllAttributesParserWrapperBase.cpp  AllAttributesParserWrapperBase.h  CMakeLists.txt  GeneralParserDefines.cpp  GeneralParserDefines.h  Macro.h  ReadMe.txt  dllmain.cpp  get_spirit_parser.h  packages.config  parser.rc  parser.vcxproj  parser.vcxproj.filters  parser_export.h  resource.h  stdafx.h  util.h
parser/fanuc/: AllAttributesParser.cpp  AllAttributesParser.h  AllAttributesParserDefines.cpp  AllAttributesParserDefines.h  AllAttributesParserGrammar.cpp  AllAttributesParserGrammar.h  AllAttributesParserWrapper.cpp  AllAttributesParserWrapper.h  AttributesPathCalculator.cpp  AttributesPathCalculator.h  AxesRotator.cpp  AxesRotator.h  CodeGroupsDefines.h  CodeGroupsVerifier.cpp  CodeGroupsVerifier.h  DrillCycle.h  FileSplitter.cpp  FileSplitter.h  GrammarSelector.cpp  GrammarSelector.h  MacroDefines.h  MacroEvaluatedCodeVerifier.cpp  MacroEvaluatedCodeVerifier.h  MacroEvaluator.cpp  MacroEvaluator.h  MathUtils.h  MessageText.cpp  MessageText.h  MessageTextImpl.h  MessageText_en.cpp  MessageText_pl.cpp  OrderAttributeParser.cpp  OrderAttributeParser.h  PathCalculator.cpp  PathCalculator.h  RangeVerifier.cpp  RangeVerifier.h  Renumberer.cpp  Renumberer.h  RotationVerifier.cpp  (+11 more)
parser/heidenhain/: AllAttributesParser.cpp  AllAttributesParser.h  AllAttributesParserDefines.cpp  AllAttributesParserDefines.h  AllAttributesParserGrammar.cpp  AllAttributesParserGrammar.h  AllAttributesParserWrapper.cpp  AllAttributesParserWrapper.h
parser_net/: AllAttributesParser.cs  FanucAllAttributesParser.cs  Grammar.cs  HeidenhainAllAttributesParser.cs  PredefinedBlocks.cs  parser_net.csproj
parser_net/Properties/: AssemblyInfo.cs
parser_net_test/: FanucAllAttributesParserTests.cs  HeidenhainAllAttributesParserTests.cs  packages.config  parser_net_test.csproj
parser_net_test/Properties/: AssemblyInfo.cs
parser_ut/: CMakeLists.txt  ReadMe.txt  packages.config  parser_ut.vcxproj  parser_ut.vcxproj.filters  stdafx.cpp
parser_ut/fanuc/: AllAttributesParserTest.cpp  AttributesPathCalculatorTest.cpp  AttributesVisitor.cpp  AttributesVisitor.h  AxesRotatorTest.cpp  CodeGroupsVerifierTest.cpp  FileSplitterTest.cpp  MacroEvaluatedCodeVerifierTest.cpp  MacroEvaluatorTest.cpp  MessageTextTest.cpp  OrderAttributeParserTest.cpp  PathCalculatorTest.cpp  RangeVerifierTest.cpp  RenumbererTest.cpp  RotationVerifierTest.cpp  SameWordInBlockVerifierTest.cpp  SystemMacroAssignerTest.cpp  UnitConverterTest.cpp  ValueCalculatorTest.cpp
parser_ut/heidenhain/: AllAttributesParserTest.cpp  AttributesVisitor.cpp  AttributesVisitor.h
plugin/: .gitignore  .vscodeignore  package.json  snippets.json
plugin/vscode-client/: .vscodeignore
syntaxes/: ncproj.tmLanguage.json
tools/cmake/: DetectDistro.cmake  FindGCCVersion.cmake
vagrant/: VagrantWindows10  VagrantWindows11
vscode-client/: tsconfig.json
vscode-client/src/: extension.ts
(+27 files in other folders)
